platform/security/gatekeeper/constraints/require-probes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerProbes
metadata:
  name: require-probes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["aaas"]
  parameters: {}
